tests/ui/explicit-tail-calls/callee_is_ref.stderr
error: tail calls can only be performed with function definitions or pointers
  --> $DIR/callee_is_ref.rs:8:12
   |
LL |     become (&f)()
   |            ^^^^^^
   |
   = note: callee has type `&fn() {f}`
help: try dereferencing here
   |
LL |     become (*(&f))()
   |            ++    +

error: tail calls can only be performed with function definitions or pointers
  --> $DIR/callee_is_ref.rs:14:16
   |
LL |         become fun();
   |                ^^^^^
   |
   = note: callee has type `&fn()`
help: try dereferencing here
   |
LL |         become (*fun)();
   |                ++   +

error: aborting due to 2 previous errors

